tests/rt/pos/ifc/substring03.trp
let val s = "Hello, World!" raisedTo `{charlie}`
    val i = 3
    val j = 5
in substring (s, i, j)
end
