tests/rt/neg/ifc/defer.trp
let val s = 42 raisedTo `{secret}`
    fun deferred () = s
in adv(deferred)
end